--- a/index.html
+++ b/index.html
@@ -9,9 +9,24 @@ rel="stylesheet"href="style.css" >
 </head>
 <body>
     <header class="container text-center my-4"
-    <img scr=""alt=""class="
-    <h1>Olà! Eu sou Fernnada</h1>
+    <img scr="https://via.placeholder.com/150" alt="Avatar" class="rounded-circle mb-3">
+    <h1>Olà! Eu sou Bruna</h1>
+    <p class="lead"> Ensino programação para jovens estudantes.</p>
+</header>
     
-    
-</body>
-</html>
+<main class="container my-5">
+    <h2 class="text-center mb-4">Projeto em Destaque</h2>
+    <div class="card mx-auto" style="max-width: 400px;">
+        <img src=""https://via.placeholder.com/400x200" class=" card-img-top" alt="imagem do projeto">
+        <div class="card-body">
+            <h5 class="card-title"> Minha Biblioteca Web </h5>
+            <p class="card-text"> Uma página com meus livros favoritos, feita com HTMl e css.</p>
+            <a href="#" class="btn btn-link "> Ver projeto </a>
+            </div>
+           </div>
+           </main>
+           <footer class ="contrainer text-center my-5">
+            <p>& copy; 2024- Bruna </p>
+            </footer>
+            </body>
+            </html>
